--- a/pom.xml
+++ b/pom.xml
@@ -336,7 +336,7 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
-			<url>http://nexus.synaptix-labs.com/content/groups/public_release</url>
+			<url>http://nexus.talanlabs.com/content/groups/public_release</url>
 		</repository>
 		<repository>
 			<id>synaptix-snapshots-repository</id>
@@ -346,7 +346,7 @@
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
-			<url>http://nexus.synaptix-labs.com/content/groups/public_snapshots</url>
+			<url>http://nexus.talanlabs.com/content/groups/public_snapshots</url>
 		</repository>
 		<repository>
 			<id>java.net-Public</id>
@@ -848,11 +848,11 @@
 	<distributionManagement>
 		<repository>
 			<id>synaptix-releases-repository</id>
-			<url>http://nexus.synaptix-labs.com/content/repositories/releases/</url>
+			<url>http://nexus.talanlabs.com/content/repositories/releases/</url>
 		</repository>
 		<snapshotRepository>
 			<id>synaptix-snapshots-repository</id>
-			<url>http://nexus.synaptix-labs.com/content/repositories/snapshots/</url>
+			<url>http://nexus.talanlabs.com/content/repositories/snapshots/</url>
 		</snapshotRepository>
 	</distributionManagement>
 	<profiles>
