--- a/processManager/pom.xml
+++ b/processManager/pom.xml
@@ -1,19 +1,20 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <groupId>com.synaptix</groupId>
-    <artifactId>SynaptixLibs</artifactId>
-    <version>4.2.16-SNAPSHOT</version>
-    <relativePath>../pom.xml</relativePath>
-  </parent>
-  <artifactId>processManager</artifactId>
-  <packaging>pom</packaging>
-  <name>Synaptix - ProcessManager</name>
-  <modules>
-  	<module>SynaptixProcessManagerApi</module>
-  	<module>SynaptixToolkit</module>
-  	<module>SynaptixProcessManagerCore</module>
-  	<module>SynaptixTriggerManager</module>
-  	<module>SynaptixProcessManagerPlugin</module>
-  </modules>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<groupId>com.synaptix</groupId>
+		<artifactId>SynaptixLibs</artifactId>
+		<version>4.2.17-SNAPSHOT</version>
+		<relativePath>../pom.xml</relativePath>
+	</parent>
+	<artifactId>processManager</artifactId>
+	<packaging>pom</packaging>
+	<name>Synaptix - ProcessManager</name>
+	<modules>
+		<module>SynaptixProcessManagerApi</module>
+		<module>SynaptixToolkit</module>
+		<module>SynaptixProcessManagerCore</module>
+		<module>SynaptixTriggerManager</module>
+		<module>SynaptixProcessManagerPlugin</module>
+	</modules>
 </project>
